@@ -22,9 +22,12 @@ Convenience features:
  - Remove pause for "we love the king" messages
  - Suppress "maximum hypertext links exceeded" popup
  - Civilopedia indicates when units go obsolete but cannot be upgraded
- - ** Message appears after bomber dodges interception by air defense buildings
- - ** Option to replay AI moves for all human players in hotseat mode
- - ** Restore unit directions on game load
+ - Message appears after bomber dodges interception by air defense buildings
+ - Option to replay AI moves for all human players in hotseat mode
+ - Restore unit directions on game load
+ - ** Optimize improvement loops
+ - ** Option to remove Elvis Easter egg
+ - ** Harbor/airport city icons indicate unit effects not trade abilities
 AI enhancements:
  - Allow AI to use artillery in the field
  - Force AI to build more artillery and bombers
@@ -41,11 +44,12 @@ Bugs fixed:
  - Crash possible when AI civ is left alive with only a settler on a transport (called the "houseboat bug")
  - Resources beyond the first 32 share access records in cities not on the main trade network (called the "phantom resource bug")
  - Air units lose a turn after being set to intercept
- - Cached building maintenance amounts not updated when buildings are obsoleted
- - Barbarian long-range search for targets is limited to tiles directly NW or SE
+ - ** Cached building maintenance amounts not updated when buildings are obsoleted
+ - ** Barbarian long-range search for targets is limited to tiles directly NW or SE
 Engine extensions:
  - Adjustable minimum city distance
  - Option to limit railroad movement
+  - ** Fix incorrect ETAs in go-to mode
  - Removed unit limit
  - Enable free improvements from small wonders
  - Option to prevent autoraze and razing by players
@@ -56,7 +60,6 @@ Engine extensions:
  - "Perfume" units or improvements to control how likely the AI is to build them
  - Reveal AI logic
   - Press P in city screen to see AI point value for each available build
-    - ** Units with multiple possible strategies have the different possibilities labeled
   - Press L on map to see how desirable the AI finds each tile as a city location
  - Corruption can be completely removed with "OFF" government setting
  - Disallow land units from working or settling water tiles
@@ -72,16 +75,19 @@ Engine extensions:
  - Option to reduce AI research rate by half
  - Option to aggressively penalize bankrupt players
  - Option to remove exception to tile penalty for city tiles with fresh water and Agri trait
- - ** Enable stealth attacks via bombardment
- - ** Artillery can be set to use PTW-like targeting against cities
- - ** Recon missions can be made vulnerable to interception
- - ** Option to charge one move for recon missions and interception
- - ** Allow players to opt out of stealth attacks
- - ** Polish precision striking by land or sea units
+ - Enable stealth attacks via bombardment
+ - Artillery can be set to use PTW-like targeting against cities
+  - ** Can use charm bombard flag to control this
+ - Recon missions can be made vulnerable to interception
+ - Option to charge one move for recon missions and interception
+ - Allow players to opt out of stealth attacks
+ - Polish precision striking by land or sea units
   - Use regular bombard animation instead of flying animation
   - Use bombard range instead of operational range
   - Cannot be intercepted
-- ** Option to immunize aircraft against bombardment
+ - Option to immunize aircraft against bombardment
+ - ** Option to ignore king flag on defense, so kings aren't always last to defend in a stack
+ - ** Option to show untradable techs on trade screen
 
 INSTALLATION AND USAGE:
 Extract the mod to its own folder then copy that folder into your Civ install directory (i.e. the folder containing Civ3Conquests.exe). Then activate the mod by double-clicking the INSTALL.bat or RUN.bat scripts. INSTALL.bat will install the mod into Civ3Conquests.exe, RUN.bat will launch Civ 3 then apply the mod to the program in memory. The mod's behavior is highly adjustable by editing the config file named "default.c3x_config.ini". Also that config file contains info about some mod features that aren't fully explained in this README.
