@@ -53,7 +53,7 @@ restore_unit_directions_on_game_load = true
 ; effects and trade abilities into different buildings.
 city_icons_show_unit_effects_not_trade = true
 
-; Rewrites parts of the game logic to improve efficiency. These parts check every possible improvement defined in the scenario when they really only
+; Rewrites parts of the game logic to improve efficiency. Those parts check every possible improvement defined in the scenario when they really only
 ; need to check a few. For example, to determine whether a city can trade via air, it's very wasteful to check every improvement since the vast
 ; majority of them do not enable air trade. This option can improve turn times very significantly in some circumstances.
 optimize_improvement_loops = true
