@@ -4,6 +4,7 @@
 - Fix incorrect ETAs in go-to mode when railroad movement is limited
 - Can limit the number of escorts the AI assigns to its naval transports
 - Fix barbarian diagonal bug
+- Optimize improvement loops
 - Option to show untradable techs on trade screen
 - Option to remove Elvis Easter egg
 - Fix cached building maintenance amounts not being updated when buildings are obsoleted
